ng-cloak to avoid angular template flicker and scrollbar for event list in map view

--- a/home/static/my/styles/generic.less
+++ b/home/static/my/styles/generic.less
@@ -279,3 +279,8 @@
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* IE10+ */
 }
+
+
+.scrollbar-always-present {
+    overflow-y: scroll;
+}
